tests/gen/testdata/configs/fail/platform_extension_native_flannel_cni.jsonnet
// OKE native network shape cannot request the flannel cluster CNI
// error_contains: config_params.cni_type native requires config_params.cni vcn_native
{
  hub: { kind: 'hub_e', network: { vcn: '10.0.0.0/21' } },
  environments: {
    prod: {
      platforms: {
        oke: {
          network: { vcn: '10.0.80.0/21' },
          extension: {
            type: 'oke_simple',
            params: {
              kubernetes_version: 'v1.35.2',
              services_cidr: '10.96.0.0/16',
              cni_type: 'native',
              cni: 'flannel',
              api_endpoint_allowed_cidrs: ['10.0.1.0/24'],
            },
          },
        },
      },
    },
  },
}
